# telegram_bot_union_architecture

TGbot_template-main/: AGENT.MD  Dockerfile  docker-compose.yml  pyproject.toml
TGbot_template-main/tg_bot_template/: __init__.py  bot.py  config.py  container.py
TGbot_template-main/tg_bot_template/bot_infra/: filters.py  states.py
TGbot_template-main/tg_bot_template/bot_lib/: aiogram_overloads.py
TGbot_template-main/tg_bot_template/db_infra/: __init__.py  db.py  models.py  repositories.py  unit_of_work.py
TGbot_template-main/tg_bot_template/domain/: models.py  repositories.py  uow.py
