[tool.poetry]
name = "tgbot-template"
version = "0.1.0"
description = "simple template for tg bot via aiogram"
authors = ["NekitPnt <panatikin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.20.0.post0"
aiohttp = ">=3.11,<3.12"
redis = "6.2.0"
pydantic-settings = "2.10.1"
pydantic = "2.11.7"
loguru = "0.7.3"
aioschedule = "0.5.2"
aiocache = "0.12.3"
certifi = "2025.6.15"
python-dotenv = "1.1.1"
SQLAlchemy = "2.0.41"
ujson = "5.10.0"
msgpack = "1.1.1"
multidict = "^6.5"
dependency-injector = "4.48.1"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "1.16.1"
ruff = "0.12.0"
black = "25.1.0"

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.0.0"

[tool.black]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
scripts_are_modules = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "B",
  "C4",
  "DTZ",
  "T10",
  "ISC",
  "ICN",
  "PIE",
  "T20",
  "PT",
  "Q",
  "RET",
  "SLF",
  "SIM",
  "ERA",
  "PLE",
  "TRY",
]
unfixable = [
  "ERA", # do not autoremove commented out code
]
ignore = ["TRY003"]
line-length = 120
